trying to draw arc via Canvas, need to fix line size before continuing

--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,5 @@
-(executable
- (public_name main)
- (name main)
+(executables
+ (names main draw_arc)
+ (public_names main draw_arc)
  (libraries raytrace))
+
