--- a/test/dune
+++ b/test/dune
@@ -1,3 +1,3 @@
 (tests
- (names test_tuple test_draw test_matrix)
+ (names test_tuple test_draw test_matrix test_transform)
  (libraries raytrace ounit2))
