--- a/bin/dune
+++ b/bin/dune
@@ -1,5 +1,5 @@
 (executables
- (names main draw_arc)
- (public_names main draw_arc)
+ (names main draw_arc draw_sphere)
+ (public_names main draw_arc draw_sphere)
  (libraries raytrace))
 
