refactored sphere into Child class of Shape abstract

--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,7 @@
+
 (library
  (name raytrace)
- (modules draw data transform graphics)
- (public_name raytrace))
+ (modules :standard)
+ (wrapped false)
+ (public_name raytrace)
+)
