--- a/bin/dune
+++ b/bin/dune
@@ -1,5 +1,4 @@
 (executables
- (names main draw_arc draw_sphere render_sphere render_scene)
- (public_names main draw_arc draw_sphere render_sphere render_scene)
+ (names main draw_arc draw_sphere render_sphere render_scene render_plane)
+ (public_names main draw_arc draw_sphere render_sphere render_scene render_plane)
  (libraries raytrace))
-
