--- a/bin/dune
+++ b/bin/dune
@@ -1,4 +1,4 @@
 (executables
- (names main draw_arc draw_sphere render_sphere render_scene render_plane)
- (public_names main draw_arc draw_sphere render_sphere render_scene render_plane)
+ (names main draw_arc draw_sphere render_sphere render_scene render_plane render_patterns)
+ (public_names main draw_arc draw_sphere render_sphere render_scene render_plane render_patterns)
  (libraries raytrace))
